# qite-quantum-platform-testing

./: .gitignore  EXP_V001.md  EXP_V002.md  EXP_V003.md  EXP_V004.md  EXP_V005.md  EXP_V006.md  EXP_V007.md  EXP_V009.md  EXP_V010.md  EXP_V011.md  EXP_V012.md  EXP_V013.md  EXP_V014.md  EXP_V017.md  EXP_V019.md  EXP_V021.md  EXP_V022.md  EXP_V023.md  EXP_V024.md  README.md  entry.py  entry_notebook.py  environment.yml  environment_cross.yml  pyproject.toml  pytest.ini  requirements-dev.txt  scan_functions.py
aiexchange/: SETUP.md  TESTING.md  generate_data.py
analysis_and_reporting/: coverage_computation.py  ddmin.py  ddmin_qiskit.py  ddmin_target_file.py  ddmin_test.py  identify_platform.py  platform_identification.jinja  triage.py
config/: demo_qite.yaml  demo_single_command.yaml  demo_two_commands.yaml  v005.yaml  v007.yaml  v008.yaml  v009.yaml  v011.yaml  v013.yaml  v014.yaml  v015.yaml  v016.yaml  v018.yaml  v019.yaml  v020.yaml  v021.yaml  v022.yaml  v023.yaml  v024.yaml  v025.yaml  v026_iter_2.yaml  v028.yaml  v031.yaml  v032.yaml  v033.yaml  v034.yaml  v035.yaml  v036.yaml  v037.yaml  v038.yaml  v039.yaml  v040.yaml  v041.yaml  v042.yaml  v043.yaml  v044.yaml  v045.yaml  v046.yaml  v046_debug.yaml  v047.yaml  (+2 more)
docker/: docker.spec  dockerfile  to_execute.py
docker_circuit_fragments_miner/: dockerfile  self_contained_logger.py  test_suite_inspired_generator.py
docker_legacy/: docker.spec  dockerfile
generators/: circuit_fragment_single.jinja  circuit_qasm_embedded.jinja  circuit_random_ops.jinja  circuit_random_ops_no_meas.jinja  combine_circuits.py  (+18 more)
(+466 files in other folders)
